About & gallery is hidden, overflow-x is fixed

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -8,7 +8,7 @@
 
 .contacts::after {
     content: '';
-    width: 100%;
+    width: 92%;
     height: 100%;
     position: absolute;
     
